--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "body-parser": "^1.18.3",
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
+    "global": "^4.3.2",
     "mongoose": "^5.2.9",
-    "pokemontcgsdk": "^1.1.0"
+    "pokemontcgsdk": "^1.1.0",
+    "react": "^16.5.1"
   }
 }
